Add unstyled UI that tracks the winner of each round, tallies score up to 5 points, then declares a winner and shows a button to reset the game

--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<script src="./main.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rock, Paper, Scissors</title>
+</head>
+<body>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+    <div id="player-choice"></div>
+    <div id="computer-choice"></div>
+    <div id="round-result"></div>
+    <div id="human-score">Human Score: 0</div>
+    <div id="computer-score">Computer Score: 0</div>
+    <div id="final-score"></div>
+    <div id="game-result"></div>
+    <button id="play-again" style="display: none;">Play Again</button>
+    <script src="./main.js"></script>
+</body>
+</html>
