Take move selection buttons out of playRound function
Rock/paper/scissor button event listeners were being created each time the game was restarted with Play Again button, causing score per click to jump exponentially with each reset

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <div id="final-score"></div>
     <div id="game-result"></div>
     <button id="play-again" style="display: none;">Play Again</button>
-    <script src="./main.js"></script>
+    <script src="./test.js"></script>
 </body>
 </html>
